fixing responsive layouts

--- a/html/bnbledger.html
+++ b/html/bnbledger.html
@@ -136,7 +136,8 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>The passive job seeker is a skilled employee who is starting to feel that the next job is on the horizon. They are busy with their current job and do not have time to do a search, but would be open to new opportunities. They only want to see jobs that they are qualified for and ones that they'd leave their current job for. They are frequently contacted by recruiters - many times at inopportune times and for jobs they are not interested in. </p>
+      <p>Airbnb power hosts are people that are serious about their Airbnb business. They often manage multiple listings and invest time and money into growing their revenue on the platform. They are often frustrated by the lack of analytics provided by Airbnb.</p>
+      <p>Metrics that are important to them include daily and monthly revenue rates, occupancy rates and profit and loss. They'd like to have a place where they are able to see how their bottom line is affected with each new booking.</p>
     </div>
   </div>
 </div>
@@ -150,7 +151,7 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/bnbledger-logo.png"></div>
+      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive logo" src="../images/bnbledger-logo.png"></div>
       <h5>Logo</h5>
       <p>Starts visual design and branding</p>
     </div>
@@ -171,19 +172,26 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>What was</h3>
-        <h4>the solution?</h4>
+        <h3>New design</h3>
+        <h4>solutions</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
-
-      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use website that guides them into creating an appealing posting with succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+      <p>Airbnb power hosts are often managing multiple properties at once and need a place where they can see their total revenue.</p>
+      <img class="responsive" src="../images/bnbledger/1.png">
+      <p>They also need to be able to isolate each property to understand their proportion of the total value.</p>
+      <img class="responsive" src="../images/bnbledger/4.png">
+      <p>Revenue and occupancy trends are also important.</p>
+      <img class="responsive" src="../images/bnbledger/2.png">
+      <p>Drilling in to a property allows the host to focus and isolate problems.</p>
+      <img class="responsive"  src="../images/bnbledger/6.png">
+      <p>The landing page speaks directly to the power host.</p>
+      <img class="responsive"  src="../images/bnbledger/7.png">
     </div>
   </div>
 </div>
 
-<div class="details container">
+<!--<div class="details container">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="details-title">Details</h4>
@@ -211,7 +219,7 @@
       <p>prototypes</p>
     </div>
   </div>
-</div>
+</div>-->
 
 
 
