--- a/html/currencycheatsheet.html
+++ b/html/currencycheatsheet.html
@@ -34,113 +34,13 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/1.png">
+            <img class="responsive" src="../images/currencycheatsheet/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>home</h4>
+            <h4>cheatsheet</h4>
             <hr>
-            <p>The logged-out home page has simple sign up mechanism (email and password only) at the top of the page. </p>
-            <p>Current bitcoin prices add value to a user before they sign up.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/10.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>post sign up</h4>
-            <hr>
-            <p>After signing up, the user is asked to connect their bitcoin accounts.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/7.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>accounts</h4>
-            <hr>
-            <p>The connected accounts then populate the balance information.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/2.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>charts</h4>
-            <hr>
-            <p>In charts, the user can see data visualizations of their portfolio value, gains and losses and tax information.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/3.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>bitcoin</h4>
-            <hr>
-            <p>To see currency trading history, bitcoin prices and the user's break even price, the user drops down the bitcoin panel. </p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/4.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>spending charts</h4>
-            <hr>
-            <p>Pie charts show the user's spending habits and division of holdings within each company.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/5.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>ledger</h4>
-            <hr>
-           <p>In the ledger, the user can see their transactions, fees and balances.</p>
-           <p>Transaction types are marked with color labels and users are able to write notes on each.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/6.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>taxes</h4>
-            <hr>
-            <p>The tax area shows all taxable transactions and 3 methodology choices for tax reporting.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/8.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>emails</h4>
-            <hr>
-            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/9.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>emails</h4>
-            <hr>
-            <p>Emails were designed to coordinate the brand established by the website. Cheeky welcome graphics illustrated topics.</p>
+            <p>Asite created for the curious to learn about money through the comparison of the dollar, gold and bitcoin.</p>
+            <p><a href="http://www.currencycheatsheet.com" target="blank">Visit the site</a></p>
           </div>
         </div>
 
@@ -154,12 +54,12 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>Who are</h3>
-        <h4>the money curious?</h4>
+        <h3>Who are the</h3>
+        <h4>money curious?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>They’re people who pay attention to their money and are curious about how currencies work. They hear about terms like &lsquo;the gold standard&rsquo;, &lsquo;fiat currency&rsquo; and &lsquo;decentralized currency&rsquo; but don't quite understand what they mean or why they are written about often.
+      <p>They’re people who pay attention to their money and are curious about how currencies work. They hear about terms like &lsquo;the gold standard&rsquo;, &lsquo;fiat currency&rsquo; and &lsquo;decentralized currency&rsquo; but don't quite understand what they mean or why they are often in the news.
       <p>They are people who are interested in bitcoin and the blockchain technology and need a quick impartial way to understand its implications.</p>
     </div>
   </div>
@@ -174,14 +74,10 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-4">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/2.png"></div>
+      <div class="project-item-top"><img class="responsive outline" src="../images/currencycheatsheet/1.png"></div>
       <h5>Site</h5>
-      <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
-    </div>
-    <div class="project-item col-sm-4">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/8.png"></div>
-      <h5>Email</h5>
-      <p>Coordinating emails introduce users to features</p>
+      <p>Compares the dollar to gold and bitcoin.</p>
+      <p class="lead"><a href="http://www.currencycheatsheet.com" target="blank">Visit site</a></p>
     </div>
   </div>
 </div>
@@ -190,19 +86,19 @@
   <div class="row">
     <div class="body-left col-sm-4">
       <div class="body-title">
-        <h3>New design</h3>
-        <h4>solutions</h4>
+        <h3>sharing the</h3>
+        <h4>research</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would allow a candidate to share their linked in profile page to be automatically qualified. They would browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they first showed interest.</p>
-
-      <p>The recruiter would have a streamlined process of adding jobs to the system through an easy to use website that guides them into creating an appealing posting with succinct details. They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
+      <p>This project came out of the research conducted during the design of Coin Leger. We wanted to refer to the information without needing to open a document and we wanted others to benefit from our research.</p>
+      <p>The site was set up to be scanned quickly, with short succinct paragraphs describing each topic and illustrations to make the long page of text feel less overwhelming. The content was most useful as a comparision so each of the currencies were laid out alongside each other. Links to sources were embedded into the text.</p>
+      <img class="responsive" src="../images/currencycheatsheet/1.png">
     </div>
   </div>
 </div>
 
-<div class="details container">
+<!--<div class="details container">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="details-title">Details</h4>
@@ -229,7 +125,7 @@
       <p>live site</p>
     </div>
   </div>
-</div>
+</div>-->
 
 
 
