--- a/html/rarelead.html
+++ b/html/rarelead.html
@@ -138,7 +138,7 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive" src="../images/rarelead-logo.png"></div>
+      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive logo" src="../images/rarelead-logo.png"></div>
       <h5>Logo</h5>
       <p>Starts visual design and branding</p>
     </div>
@@ -170,17 +170,17 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would automatically qualify a candidate by parsing their Linkedin profile. A seeker could browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they showed interest first .</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/screens/4.png">
+      <img class="responsive phone" src="../images/rarelead/screens/4.png">
 
 
       <p>The recruiter would have a streamlined process of adding jobs to the system through a website that guides them into creating an appealing posting with succinct details. </p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/8-1.png">
+      <img class="responsive" src="../images/rarelead/8-1.png">
 
       <p>They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/9-1.png">
+      <img class="responsive" src="../images/rarelead/9-1.png">
 
-      <p>A landing page was designed to drum up seeker interest.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/rarelead/16-1.png">
+      <p>The landing page was designed to gauge job seeker interest while we tested out the concept.</p>
+      <img class="responsive" src="../images/rarelead/16-1.png">
     </div>
   </div>
 </div>
