--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -198,25 +198,25 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first examined how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved ($1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the separation clear.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/coinledger/2.png">
+      <img class="responsive" src="../images/coinledger/2.png">
 
       <p>Bitcoin's price can vary dramatically minute to minute, and investors trading on this fact need to monitor price fluctuations and see trends at where they bought and sold. I designed a dropdown area where investors could access this information.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/3.png">
+      <img class="responsive" src="../images/coinledger/3.png">
 
       <p>For the ledger, I interviewed an investor to determine the actions and categories that would be important to them. I designed a color coding system to tag transactions for ease of browsing.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/5.png">
+      <img class="responsive" src="../images/coinledger/5.png">
 
       <p>Paying taxes on bitcoin investment is a major headache for investors, so making the tax page look and feel simple was very important.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/6.png">
+      <img class="responsive" src="../images/coinledger/6.png">
 
       <p>Overall, it was important to make a design that felt simple, straightforward and trustworthy for investors. I kept that in mind in the design of the home page.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/coinledger/1.png">
+      <img class="responsive" src="../images/coinledger/1.png">
 
     </div>
   </div>
 </div>
 
-<div class="details container">
+<!--<div class="details container">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="details-title">Details</h4>
@@ -243,7 +243,7 @@
       <p><a href="http://www.coinledger.io" target="blank">live site</a></p>
     </div>
   </div>
-</div>
+</div>-->
 
 
 
