--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -259,25 +259,25 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that described what Creative Live did, reinforcing the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a friendly handwriting feel.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/creativelive/2.png">
+      <img class="responsive" src="../images/creativelive/2.png">
 
       <p>Instead of having one corporate color, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
-      <img class="responsive" style="margin-bottom:60px;" src="../images/creativelive/4.png">
+      <img class="responsive" style="border:none" src="../images/creativelive/4.png">
 
       <p>On catalog pages I created a simple filtering mechanism.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/8.png">
+      <img class="responsive" src="../images/creativelive/8.png">
 
       <p>For the calendar, we ran tests to see what users needed and found that a list layout was optimal.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/15.png">
+      <img class="responsive" src="../images/creativelive/15.png">
 
       <p>For the class pages, I kept the videos above the fold for ease of browsing.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/7.png">
+      <img class="responsive" src="../images/creativelive/7.png">
 
       <p>The classroom was designed to be an immersive experience that allowed users to easily focus and interact with the instructor.</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/24.png">
+      <img class="responsive" src="../images/creativelive/24.png">
 
-      <p>The mobile app coordinated with the site and was optimized for a user watching classes on the go</p>
-      <img class="responsive" style="margin-bottom:60px; border: 1px solid #cfcfcf;" src="../images/creativelive/16.png">
+      <p>The mobile app coordinated with the site and was optimized for a user watching classes on the go.</p>
+      <img class="responsive phone" src="../images/creativelive/16.png">
 
     </div>
   </div>
