--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -165,16 +165,16 @@
 
 
       <p>I started by simplifying the navigation and created a wrapper that would ease Quantcast into the redesign. I created a home page that was direct and easy to read. After this launched we began the product redesign process.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/1.png">
+      <img class="responsive" src="../images/quantcast/1.png">
 
       <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and an ability to control the presentation of their data in their profile so they could show themselves in the best possible light.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/12.png">
+      <img class="responsive" src="../images/quantcast/12.png">
 
       <p>Because comparisons were important, I designed an area where publishers could save favorites, categorize them and create comparison charts.</p>
-      <img class="responsive" style="margin:20px 0 60px 0; border: 1px solid #cfcfcf;" src="../images/quantcast/10.png">
+      <img class="responsive" src="../images/quantcast/10.png">
 
       <p>Each data visualization was customized for clarity and purpose.</p>
-      <img class="responsive" style="margin:20px 0 60px 0;" src="../images/quantcast/4.png">
+      <img class="responsive" style="border:none" src="../images/quantcast/4.png">
 
     </div>
   </div>
