--- a/html/bnbledger.html
+++ b/html/bnbledger.html
@@ -181,7 +181,7 @@
       <img class="responsive" src="../images/bnbledger/1.png">
       <p>They also need to be able to isolate each property to understand their proportion of the total value.</p>
       <img class="responsive" src="../images/bnbledger/4.png">
-      <p>Revenue and occupancy trends are also important.</p>
+      <p>Occupancy trends are also important.</p>
       <img class="responsive" src="../images/bnbledger/2.png">
       <p>Drilling in to a property allows the host to focus and isolate problems.</p>
       <img class="responsive"  src="../images/bnbledger/6.png">
