--- a/index.html
+++ b/index.html
@@ -1,58 +1,74 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
-  <link rel="stylesheet" type="text/css" href="css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="css/screen-layout-large.css" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/screenstyle.css">
+  <link rel="stylesheet" type="text/css" href="css/screen-layout-large.css">
 </head>
-<body class="clearfix">
-  <div class="header-container clearfix">
-    <div class="header">
+<body>
+
+<div class="container-fluid header">
+  <div class="row">
+    <div class="col-sm-2 col-xs-6">
       <h1>e.g.</h1>
-      <a class="headshot" href="#"><img src="images/headshot.png"><p>about</p></a>
     </div>
-  </div>
-  <div class="layout-container clearfix">
-    <div class="hometitle clearfix">
+    <div class="col-sm-2 col-sm-push-8 col-xs-6 text-right">
+      <a class="headshot" href="#"><img class="img-circle" src="images/headshot.png"><p>about</p></a>
+    </div>
+    <div class="col-sm-8 col-sm-pull-2 col-xs-12 text-center hometitle">
       <h2>made<span class="titlecap">for</span>use</h2>
       <p class="subtitle">product design that puts the user first</p>
     </div>
+  </div>
+</div>
 
-    <div class="homethumbs clearfix">
-      <a class="thumb" href="html/coinledger.html">
-        <span class="thumbwords">bitcoin investors</span>
+<div class="container container-wide">
+  <div class="homethumbs row">
+    <a class="col-sm-4 thumb" href="html/coinledger.html">
+      <div>
         <span class="thumbimage" style="background-image: url(images/home_bitcoin.png);"></span>
-      </a>
-      <a class="thumb" href="html/creativelive.html">
-        <span class="thumbwords">creative learners</span>
+        <span class="thumbwords">bitcoin investors</span>
+      </div>
+    </a>
+    <a class="col-sm-4 thumb" href="html/creativelive.html">
+      <div>
         <span class="thumbimage" style="background-image: url(images/home_creativelive.png);"></span>
-      </a>
-      <a class="thumb" href="html/quantcast.html">
-        <span class="thumbwords">web publishers</span>
+        <span class="thumbwords">creative learners</span>
+      </div>
+    </a>
+    <a class="col-sm-4 thumb" href="html/quantcast.html">
+      <div>
         <span class="thumbimage" style="background-image: url(images/home_quantcast.png);"></span>
-      </a>
-      <a class="thumb" href="html/rarelead.html">
-        <span class="thumbwords">passive job seekers</span>
+        <span class="thumbwords">web publishers</span>
+      </div>
+    </a>
+    <a class="col-sm-4 thumb" href="html/rarelead.html">
+      <div>
         <span class="thumbimage" style="background-image: url(images/home_rarelead.png);"></span>
-      </a>
-      <a class="thumb" href="html/bnbledger.html">
-        <span class="thumbwords">airbnb power hosts</span>
+        <span class="thumbwords">passive job seekers</span>
+      </div>
+    </a>
+    <a class="col-sm-4 thumb" href="html/bnbledger.html">
+      <div>
         <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
-      </a>
-      <a class="thumb" href="html/currencycheatsheet.html">
-        <span class="thumbwords">the money curious</span>
+        <span class="thumbwords">airbnb power hosts</span>
+      </div>
+    </a>
+    <a class="col-sm-4 thumb" href="html/currencycheatsheet.html">
+      <div>
         <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
-      </a>
-    </div>
-
+        <span class="thumbwords">the money curious</span>
+      </div>
+    </a>
   </div>
 
-<script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="js/app.js" type="text/javascript"></script>
+</div>
+
 </body>
 </html>
