working on project pages

--- a/html/currencycheatsheet.html
+++ b/html/currencycheatsheet.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="photo-container clearfix">
-  <div class="subphoto subphoto-currencycheatsheet"></div>
+  <div class="subphoto" style="background-image: url(../images/currencycheatsheet.jpg);"></div>
   <div class="whitecard view-slides clickable">
     <h4>a research project for</h4>
     <h5>the money curious</h5>
