--- a/html/bnbledger.html
+++ b/html/bnbledger.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="photo-container clearfix">
-  <div class="subphoto subphoto-bnbledger"></div>
+  <div class="subphoto" style="background-image: url(../images/bnbledger.jpg);"></div>
   <div class="whitecard view-slides clickable">
     <h4>an analytical tool for</h4>
     <h5>airbnb power hosts</h5>
