--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -1,37 +1,40 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <link rel="shortcut icon" type="../image/x-icon" href="/favicon.ico">
   <title>Erin Gallup | User Focused Product Design</title>
-  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
   <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
 </head>
-<body class="clearfix">
+<body class="project-page">
 
-<div class="header-container clearfix">
-  <div class="header">
-    <h1><a href="../index.html">e.g.</a></h1>
-    <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
+<div class="container-fluid header">
+  <div class="row">
+    <div class="col-sm-2 col-xs-6">
+      <h1>e.g.</h1>
+    </div>
+    <div class="col-sm-2 col-sm-push-8 col-xs-6 text-right">
+      <a class="headshot" href="#"><img class="img-circle" src="../images/headshot.png"><p>about</p></a>
+    </div>
   </div>
 </div>
-<div class="photo-container clearfix">
-  <div class="subphoto subphoto-coinledger"></div>
-  <div class="whitecard view-slides clickable">
+
+<div class="container-fluid photo-container">
+  <div class="subphoto" style="background-image: url(../images/coinledger.jpg);"></div>
+  <div view-slides class="whitecard">
     <h4>a site to organize</h4>
     <h5>bitcoin investors</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
-    <span class="close close-modal"></span>
     <div class="eg-modal-body container">
       <div class="slideshow row">
-
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
             <img class="responsive" src="../images/coinledger/1.png">
@@ -42,28 +45,6 @@
             <p>Designed to instill trust and appeal to bitcoin investors, the home page is simple, clean and straightforward.</p>
           </div>
         </div>
-
-        <!--<div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/10.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>post sign up</h4>
-            <hr>
-            <p>After signing up, the user is asked to connect their bitcoin accounts.</p>
-          </div>
-        </div>
-
-        <div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/7.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>accounts</h4>
-            <hr>
-            <p>The connected accounts then populate the balance information.</p>
-          </div>
-        </div>-->
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
@@ -86,17 +67,6 @@
             <p>Currency trading history, bitcoin prices and the user's break even price are easily accessible in the bitcoin dropdown panel. </p>
           </div>
         </div>
-
-        <!--<div>
-          <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/4.png">
-          </div>
-          <div class="slide-left col-sm-5 col-sm-pull-7">
-            <h4>spending charts</h4>
-            <hr>
-            <p>Pie charts show the user's spending habits and division of holdings within each company.</p>
-          </div>
-        </div>-->
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
@@ -215,37 +185,6 @@
     </div>
   </div>
 </div>
-
-<!--<div class="details container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h4 class="details-title">Details</h4>
-    </div>
-  </div>
-  <div class="row details-items match-height distribute">
-    <div class="details-item col-sm-3">
-      <h5>Project Type</h5>
-      <p>redesign</p>
-    </div>
-    <div class="details-item col-sm-3">
-      <h5>Time frame</h5>
-      <p>1 month</p>
-    </div>
-    <div class="details-item col-sm-3">
-      <h5>Team</h5>
-      <ul class="list-unstyled">
-        <li>engineer</li>
-        <li>me</li>
-      </ul>
-    </div>
-    <div class="details-item col-sm-3">
-      <h5>Outcome</h5>
-      <p><a href="http://www.coinledger.io" target="blank">live site</a></p>
-    </div>
-  </div>
-</div>-->
-
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
