--- a/html/creativelive.html
+++ b/html/creativelive.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="photo-container clearfix">
-  <div class="subphoto subphoto-creativelive"></div>
+  <div class="subphoto" style="background-image: url(../images/creativelive.jpg);"></div>
   <div class="whitecard view-slides clickable">
     <h4>designs to inspire</h4>
     <h5>creative learners</h5>
