--- a/html/quantcast.html
+++ b/html/quantcast.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div class="photo-container clearfix">
-  <div class="subphoto subphoto-quantcast"></div>
+  <div class="subphoto" style="background-image: url(../images/quantcast.jpg);"></div>
   <div class="whitecard view-slides clickable">
     <h4>reporting tools for</h4>
     <h5>web publishers</h5>
