--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Erin Gallup | User Focused Product Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/screenstyle.css">
-  <link rel="stylesheet" type="text/css" href="css/screen-layout-large.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
