--- a/html/coinledger.html
+++ b/html/coinledger.html
@@ -9,8 +9,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
 </head>
 <body class="project-page">
 
