--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Erin Gallup | User Focused Product Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -29,37 +29,37 @@
 
 <div class="container container-wide">
   <div class="homethumbs row">
-    <a class="col-sm-4 thumb" href="html/coinledger.html">
+    <a class="col-sm-4 thumb" href="projects/coinledger.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bitcoin.png);"></span>
         <span class="thumbwords">bitcoin investors</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="html/creativelive.html">
+    <a class="col-sm-4 thumb" href="projects/creativelive.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_creativelive.png);"></span>
         <span class="thumbwords">creative learners</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="html/quantcast.html">
+    <a class="col-sm-4 thumb" href="projects/quantcast.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_quantcast.png);"></span>
         <span class="thumbwords">web publishers</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="html/rarelead.html">
+    <a class="col-sm-4 thumb" href="projects/rarelead.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_rarelead.png);"></span>
         <span class="thumbwords">passive job seekers</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="html/bnbledger.html">
+    <a class="col-sm-4 thumb" href="projects/bnbledger.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
         <span class="thumbwords">airbnb power hosts</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="html/currencycheatsheet.html">
+    <a class="col-sm-4 thumb" href="projects/currencycheatsheet.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
         <span class="thumbwords">the money curious</span>
