--- a/projects/coinledger.html
+++ b/projects/coinledger.html
@@ -9,14 +9,14 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 <body class="project-page">
 
 <div class="container-fluid header">
   <div class="row">
     <div class="col-sm-2 col-xs-6">
-      <h1>e.g.</h1>
+      <h1><a href="../">e.g.</a></h1>
     </div>
     <div class="col-sm-2 col-sm-push-8 col-xs-6 text-right">
       <a class="headshot" href="#"><img class="img-circle" src="../images/headshot.png"><p>about</p></a>
@@ -188,6 +188,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
-<script src="../js/app.js" type="text/javascript"></script>
+<script src="../app.js" type="text/javascript"></script>
 </body>
 </html>
