renaming and starting on slideshow

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="container container-wide">
   <div class="homethumbs row">
-    <a class="col-sm-4 thumb" href="projects/coinledger.html">
+    <a class="col-sm-4 thumb" href="projects/coin-ledger.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bitcoin.png);"></span>
         <span class="thumbwords">bitcoin investors</span>
@@ -47,19 +47,19 @@
         <span class="thumbwords">web publishers</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="projects/rarelead.html">
+    <a class="col-sm-4 thumb" href="projects/rare-lead.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_rarelead.png);"></span>
         <span class="thumbwords">passive job seekers</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="projects/bnbledger.html">
+    <a class="col-sm-4 thumb" href="projects/bnb-ledger.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
         <span class="thumbwords">airbnb power hosts</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="projects/currencycheatsheet.html">
+    <a class="col-sm-4 thumb" href="projects/currency-cheat-sheet.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
         <span class="thumbwords">the money curious</span>
