--- a/projects/creativelive.html
+++ b/projects/creativelive.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,20 +9,24 @@
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/screenstyle.css" />
-  <link rel="stylesheet" type="text/css" href="../css/screen-layout-large.css" />
+  <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
-<body class="clearfix">
+<body class="project-page">
 
-<div class="header-container clearfix">
-  <div class="header">
-    <h1><a href="../index.html">e.g.</a></h1>
-    <a class="headshotsub" href="#"><img src="../images/headshot.png"><p>about</p></a>
+<div class="container-fluid header">
+  <div class="row">
+    <div class="col-sm-2 col-xs-6">
+      <h1><a href="../">e.g.</a></h1>
+    </div>
+    <div class="col-sm-2 col-sm-push-8 col-xs-6 text-right">
+      <a class="headshot" href="#"><img class="img-circle" src="../images/headshot.png"><p>about</p></a>
+    </div>
   </div>
 </div>
+
 <div class="photo-container clearfix">
   <div class="subphoto" style="background-image: url(../images/creativelive.jpg);"></div>
-  <div class="whitecard view-slides clickable">
+  <div view-slides class="whitecard">
     <h4>designs to inspire</h4>
     <h5>creative learners</h5>
     <h6>view slides</h6>
@@ -336,6 +340,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
-<script src="../js/app.js" type="text/javascript"></script>
+<script src="../app.js" type="text/javascript"></script>
 </body>
 </html>
