--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-icon-180x180.png">
   <title>Erin Gallup | User Focused Product Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -67,8 +68,105 @@
       </div>
     </a>
   </div>
-
 </div>
 
+<div class="container container-wide elements">
+  <div class="row">
+    <div class="col-sm-12 sub-header">
+      <strong>Four Elements</strong>
+      <span>for</span>
+      <em>Ease of Use</em>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-5 col-sm-offset-1 col-xs-4 col-xs-offset-4 text-right">
+      <img src="../images/fourelements.png" class="img-responsive">
+    </div>
+    <div class="col-sm-4 col-sm-offset-2 col-xs-6 col-xs-offset-3">
+      <ul class="list-unstyled">
+        <li class="elements-flow">
+          <strong>natural flow</strong>
+          <p>predictable page progression removes task friction</p>
+        </li>
+        <li class="elements-nav">
+          <strong>simple nav</strong>
+          <p>users find what they need faster when they have fewer choices</p>
+        </li>
+        <li class="elements-copy">
+          <strong>concise copy</strong>
+          <p>short, direct messaging means users have to read less</p>
+        </li>
+        <li class="elements-look">
+          <strong>pleasing look</strong>
+          <p>minimizes distraction and makes the user feel welcome</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container container-wide users-first">
+  <div class="row">
+    <div class="col-sm-12 sub-header">
+      <strong>User</strong>
+      <span>(Not Device)</span>
+      <em>First</em>
+      <p class="col-sm-12 text-center">design for the use case rather than the case used</p>
+    </div>
+  </div>
+  <div class="row devices match-height">
+    <div class="col-sm-3">
+      <div class="icon"><i class="fa fa-mobile"></i></div>
+      <h4>Mobile</h4>
+      <img src="images/userfirst_mobile.png">
+      <h5><span>users are on the go</span></h5>
+      <p>They are likely focusing on multiple actions at the same time (like walking,waiting or talking).</p>
+      <em>Design should let them do one task easily.</em>
+    </div>
+    <div class="col-sm-3">
+      <div class="icon"><i class="fa fa-tablet"></i></div>
+      <h4>Tablet</h4>
+      <img src="images/userfirst_tablet.png">
+      <h5><span>users are browsing</span></h5>
+      <p>They are focused and stationary. They don’t have the features of their laptops and aren’t expecting to use them.</p>
+      <em>Design should let them read easily.</em>
+    </div>
+    <div class="col-sm-3">
+      <div class="icon"><i class="fa fa-laptop"></i></div>
+      <h4>Laptop</h4>
+      <img src="images/userfirst_laptop.png">
+      <h5><span>users are at work,<br> home, or on the go</span></h5>
+      <p>They are in a meeting, on an airplane or on the couch. They have access to all their files but are looking at a smaller screen.</p>
+      <em>Design should let them feel organized within a rectangular space.</em>
+    </div>
+    <div class="col-sm-3">
+      <div class="icon"><i class="fa fa-desktop"></i></div>
+      <h4>Desktop</h4>
+      <img src="images/userfirst_desktop.png">
+      <h5><span>users are at work</span></h5>
+      <p>They are focused here many hours a day. They have the ability to use full features and the space to see it all.</p>
+      <em>Design should let them feel focused and organized within a large space.</em>
+    </div>
+  </div>
+</div>
+
+<div class="container container-wide process">
+  <div class="row">
+    <div class="col-sm-12 sub-header">
+      <strong>User-Focused</strong>
+      <em>Approach</em>
+      <p class="col-sm-12 text-center">a rapid process that allows for user feedback and easy refinement</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <img src="images/process.png" class="img-responsive">
+    </div>
+  </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="../app.js" type="text/javascript"></script>
 </body>
 </html>
