--- a/projects/creativelive.html
+++ b/projects/creativelive.html
@@ -20,7 +20,7 @@
       <h1><a href="../">e.g.</a></h1>
     </div>
     <div class="col-sm-2 col-sm-push-8 col-xs-6 text-right">
-      <a class="headshot" href="#"><img class="img-circle" src="../images/headshot.png"><p>about</p></a>
+      <a class="headshot" href="../about.html"><img class="img-circle" src="../images/headshot.png"><p>about</p></a>
     </div>
   </div>
 </div>
