working on responsiveness

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 <div class="container-fluid header">
   <div class="row">
     <div class="col-sm-2 col-xs-6">
-      <h1>e.g.</h1>
+      <h1><a href="./">e.g.</a></h1>
     </div>
-    <div class="col-sm-8 text-center hometitle">
+    <div class="col-sm-8 col-xs-12 text-center hometitle">
       <div class="sub-header">
         <h2>
           <strong>Product</strong>
@@ -32,8 +32,9 @@
 
 <div class="container container-wide">
   <div class="row">
+
     <div class="col-sm-7 col-sm-offset-1 left-col">
-      <img src="images/aboutcircles.png" class="img-responsive">
+      <img src="images/aboutcircles.png" class="img-responsive circle">
 
       <span class="small-header">Across</span>
 
@@ -49,8 +50,37 @@
 
       <span class="small-header">Helping</span>
       <img src="images/logopile.png" class="img-responsive logopile">
-
     </div>
+
+    <div class="col-sm-4 right-col text-center">
+      <img src="images/favicon/ms-icon-310x310.png" class="img-responsive circle">
+      <span class="small-header">Erin Gallup</span>
+      <a class="email" href="mailto:eg@eringallup.info">eg@eringallup.info</a>
+      <ul class="social list-unstyled list-inline">
+        <li><a class="color-twitter" href="//twitter.com/eringallup"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="color-linkedin" href="//linkedin.com/eringallup"><i class="fa fa-linkedin-square"></i></a></li>
+      </ul>
+      <hr>
+      <div class="events">
+        <span class="small-header">Events</span>
+        <ul class="list-unstyled">
+          <li>
+            6.6.15<br>
+            Guest Lecturer<br>
+            <a href>Digital Color Theory: Color &amp; Branding</a><br>
+            <span class="location">UC Berkeley Extension</span>
+        </ul>
+      </div>
+      <hr>
+      <div class="articles">
+        <span class="small-header">Articles</span>
+        <ul class="list-unstyled">
+          <li><a href>Color Theory in America</a></li>
+          <li><a href>Finding the Title for Your Situation</a></li>
+        </ul>
+      </div>
+    </div>
+
   </div>
 </div>
 
