--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </div>
   <div class="row devices match-height">
-    <div class="col-sm-3">
+    <div class="col-sm-3 col-xs-6">
       <div class="icon"><i class="fa fa-mobile"></i></div>
       <h4>Mobile</h4>
       <img class="img-responsive" src="images/userfirst_mobile.png">
@@ -133,7 +133,7 @@
       <p>They are likely focusing on multiple actions at the same time (like walking,waiting or talking).</p>
       <em>Design should let them do one task easily.</em>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 col-xs-6">
       <div class="icon"><i class="fa fa-tablet"></i></div>
       <h4>Tablet</h4>
       <img class="img-responsive" src="images/userfirst_tablet.png">
@@ -141,7 +141,7 @@
       <p>They are focused and stationary. They don’t have the features of their laptops and aren’t expecting to use them.</p>
       <em>Design should let them read easily.</em>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 col-xs-6">
       <div class="icon"><i class="fa fa-laptop"></i></div>
       <h4>Laptop</h4>
       <img class="img-responsive" src="images/userfirst_laptop.png">
@@ -149,7 +149,7 @@
       <p>They are in a meeting, on an airplane or on the couch. They have access to all their files but are looking at a smaller screen.</p>
       <em>Design should let them feel organized within a rectangular space.</em>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-3 col-xs-6">
       <div class="icon"><i class="fa fa-desktop"></i></div>
       <h4>Desktop</h4>
       <img class="img-responsive" src="images/userfirst_desktop.png">
