--- a/projects/coin-ledger.html
+++ b/projects/coin-ledger.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
-<body class="project-page">
+<body class="project-page" id="coin-ledger">
 
 <div class="container-fluid header">
   <div class="row">
@@ -131,12 +131,12 @@
     </div>
   </div>
   <div class="row project-items match-height distribute">
-    <div class="project-item col-sm-4">
+    <div class="project-item col-sm-6">
       <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/2.png"></div>
       <h5>Site</h5>
       <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
     </div>
-    <div class="project-item col-sm-4">
+    <div class="project-item col-sm-6">
       <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/9.png"></div>
       <h5>Emails</h5>
       <p>Coordinating emails introduce users to features</p>
