--- a/projects/rare-lead.html
+++ b/projects/rare-lead.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
-<body class="project-page">
+<body class="project-page" id="rare-lead">
 
 <div class="container-fluid header">
   <div class="row">
